--- a/Notebooks/limpieza_dataset.ipynb
+++ b/Notebooks/limpieza_dataset.ipynb
@@ -24,8 +24,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "3b4a61ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  vru+line  call_id  customer_id  priority type    date vru_entry vru_exit  \\\n",
+      "0   AA0101    49296          0.0         0   PS  991201   5:20:04  5:20:41   \n",
+      "1   AA0101    49297   67472894.0         2   PS  991201   7:22:53  7:22:58   \n",
+      "2   AA0101    49298   56165871.0         2   PS  991201   7:44:58  7:45:04   \n",
+      "3   AA0101    49299          0.0         0   PS  991201   8:06:40  8:06:48   \n",
+      "4   AA0101    49300   42791442.0         2   PS  991201   8:24:13  8:24:19   \n",
+      "\n",
+      "   vru_time  q_start   q_exit  q_time outcome ser_start ser_exit  ser_time  \\\n",
+      "0        37  0:00:00  0:00:00       0    HANG   0:00:00  0:00:00         0   \n",
+      "1         5  7:22:58  7:24:18      80   AGENT   7:24:17  7:30:09       352   \n",
+      "2         6  7:45:04  7:48:22     198   AGENT   7:48:21  7:49:16        55   \n",
+      "3         8  0:00:00  0:00:00       0   AGENT   8:06:47  8:09:25       158   \n",
+      "4         6  8:24:19  8:25:00      41   AGENT   8:25:00  8:28:01       181   \n",
+      "\n",
+      "      server  \n",
+      "0  NO_SERVER  \n",
+      "1     ZOHARI  \n",
+      "2     GELBER  \n",
+      "3       ROTH  \n",
+      "4     SHARON  \n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(DATA, sep='\\t')\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca136b73",
+   "metadata": {},
+   "source": [
+    "Como queremos simular una M/M/S necesitamos datos en donde el server no sea NO_SERVER por lo que eliminaremos las filas con server: NO_SERVER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0c6535f1",
    "metadata": {},
    "outputs": [
     {
@@ -69,26 +115,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AA0101</td>\n",
-       "      <td>49296</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>PS</td>\n",
-       "      <td>991201</td>\n",
-       "      <td>5:20:04</td>\n",
-       "      <td>5:20:41</td>\n",
-       "      <td>37</td>\n",
-       "      <td>0:00:00</td>\n",
-       "      <td>0:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>HANG</td>\n",
-       "      <td>0:00:00</td>\n",
-       "      <td>0:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NO_SERVER</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>AA0101</td>\n",
@@ -170,6 +196,26 @@
        "      <td>SHARON</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>AA0101</td>\n",
+       "      <td>49301</td>\n",
+       "      <td>7750219.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>PS</td>\n",
+       "      <td>991201</td>\n",
+       "      <td>8:33:24</td>\n",
+       "      <td>8:33:30</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8:33:30</td>\n",
+       "      <td>8:33:55</td>\n",
+       "      <td>25</td>\n",
+       "      <td>AGENT</td>\n",
+       "      <td>8:33:54</td>\n",
+       "      <td>8:38:47</td>\n",
+       "      <td>293</td>\n",
+       "      <td>SHARON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -188,6 +234,86 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43055</th>\n",
+       "      <td>AA0216</td>\n",
+       "      <td>17206</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>991231</td>\n",
+       "      <td>11:40:37</td>\n",
+       "      <td>11:40:46</td>\n",
+       "      <td>9</td>\n",
+       "      <td>11:40:46</td>\n",
+       "      <td>11:41:44</td>\n",
+       "      <td>58</td>\n",
+       "      <td>AGENT</td>\n",
+       "      <td>11:41:43</td>\n",
+       "      <td>11:51:52</td>\n",
+       "      <td>609</td>\n",
+       "      <td>Z2ARIE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43056</th>\n",
+       "      <td>AA0216</td>\n",
+       "      <td>17207</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>991231</td>\n",
+       "      <td>12:37:47</td>\n",
+       "      <td>12:38:04</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0:00:00</td>\n",
+       "      <td>0:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AGENT</td>\n",
+       "      <td>12:38:03</td>\n",
+       "      <td>12:41:07</td>\n",
+       "      <td>184</td>\n",
+       "      <td>Z2ARIE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43057</th>\n",
+       "      <td>AA0216</td>\n",
+       "      <td>17208</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>991231</td>\n",
+       "      <td>12:59:03</td>\n",
+       "      <td>12:59:19</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0:00:00</td>\n",
+       "      <td>0:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AGENT</td>\n",
+       "      <td>12:59:18</td>\n",
+       "      <td>13:05:47</td>\n",
+       "      <td>389</td>\n",
+       "      <td>Z2ARIE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43058</th>\n",
+       "      <td>AA0216</td>\n",
+       "      <td>17209</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>991231</td>\n",
+       "      <td>13:18:00</td>\n",
+       "      <td>13:18:14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0:00:00</td>\n",
+       "      <td>0:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AGENT</td>\n",
+       "      <td>13:18:13</td>\n",
+       "      <td>13:18:30</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Z2ARIE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>43060</th>\n",
@@ -209,141 +335,61 @@
        "      <td>553</td>\n",
        "      <td>Z2ELINOR</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43061</th>\n",
-       "      <td>AA0216</td>\n",
-       "      <td>17212</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>IN</td>\n",
-       "      <td>991231</td>\n",
-       "      <td>13:58:31</td>\n",
-       "      <td>13:58:40</td>\n",
-       "      <td>9</td>\n",
-       "      <td>13:58:40</td>\n",
-       "      <td>13:59:49</td>\n",
-       "      <td>69</td>\n",
-       "      <td>HANG</td>\n",
-       "      <td>0:00:00</td>\n",
-       "      <td>0:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NO_SERVER</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43062</th>\n",
-       "      <td>AA0216</td>\n",
-       "      <td>17213</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>IN</td>\n",
-       "      <td>991231</td>\n",
-       "      <td>17:10:51</td>\n",
-       "      <td>17:11:12</td>\n",
-       "      <td>21</td>\n",
-       "      <td>0:00:00</td>\n",
-       "      <td>0:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>HANG</td>\n",
-       "      <td>0:00:00</td>\n",
-       "      <td>0:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NO_SERVER</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43063</th>\n",
-       "      <td>AA0216</td>\n",
-       "      <td>17214</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>IN</td>\n",
-       "      <td>991231</td>\n",
-       "      <td>18:30:19</td>\n",
-       "      <td>18:30:54</td>\n",
-       "      <td>35</td>\n",
-       "      <td>0:00:00</td>\n",
-       "      <td>0:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>HANG</td>\n",
-       "      <td>0:00:00</td>\n",
-       "      <td>0:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NO_SERVER</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43064</th>\n",
-       "      <td>AA0216</td>\n",
-       "      <td>17215</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>IN</td>\n",
-       "      <td>991231</td>\n",
-       "      <td>22:23:35</td>\n",
-       "      <td>22:23:45</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0:00:00</td>\n",
-       "      <td>0:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>HANG</td>\n",
-       "      <td>0:00:00</td>\n",
-       "      <td>0:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NO_SERVER</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>43065 rows × 17 columns</p>\n",
+       "<p>33754 rows × 17 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "      vru+line  call_id  customer_id  priority type    date vru_entry  \\\n",
-       "0       AA0101    49296          0.0         0   PS  991201   5:20:04   \n",
        "1       AA0101    49297   67472894.0         2   PS  991201   7:22:53   \n",
        "2       AA0101    49298   56165871.0         2   PS  991201   7:44:58   \n",
        "3       AA0101    49299          0.0         0   PS  991201   8:06:40   \n",
        "4       AA0101    49300   42791442.0         2   PS  991201   8:24:13   \n",
+       "5       AA0101    49301    7750219.0         2   PS  991201   8:33:24   \n",
        "...        ...      ...          ...       ...  ...     ...       ...   \n",
+       "43055   AA0216    17206          0.0         0   IN  991231  11:40:37   \n",
+       "43056   AA0216    17207          0.0         0   IN  991231  12:37:47   \n",
+       "43057   AA0216    17208          0.0         0   IN  991231  12:59:03   \n",
+       "43058   AA0216    17209          0.0         0   IN  991231  13:18:00   \n",
        "43060   AA0216    17211          0.0         0   IN  991231  13:46:51   \n",
-       "43061   AA0216    17212          0.0         0   IN  991231  13:58:31   \n",
-       "43062   AA0216    17213          0.0         0   IN  991231  17:10:51   \n",
-       "43063   AA0216    17214          0.0         0   IN  991231  18:30:19   \n",
-       "43064   AA0216    17215          0.0         0   IN  991231  22:23:35   \n",
        "\n",
        "       vru_exit  vru_time   q_start    q_exit  q_time outcome ser_start  \\\n",
-       "0       5:20:41        37   0:00:00   0:00:00       0    HANG   0:00:00   \n",
        "1       7:22:58         5   7:22:58   7:24:18      80   AGENT   7:24:17   \n",
        "2       7:45:04         6   7:45:04   7:48:22     198   AGENT   7:48:21   \n",
        "3       8:06:48         8   0:00:00   0:00:00       0   AGENT   8:06:47   \n",
        "4       8:24:19         6   8:24:19   8:25:00      41   AGENT   8:25:00   \n",
+       "5       8:33:30         6   8:33:30   8:33:55      25   AGENT   8:33:54   \n",
        "...         ...       ...       ...       ...     ...     ...       ...   \n",
+       "43055  11:40:46         9  11:40:46  11:41:44      58   AGENT  11:41:43   \n",
+       "43056  12:38:04        17   0:00:00   0:00:00       0   AGENT  12:38:03   \n",
+       "43057  12:59:19        16   0:00:00   0:00:00       0   AGENT  12:59:18   \n",
+       "43058  13:18:14        14   0:00:00   0:00:00       0   AGENT  13:18:13   \n",
        "43060  13:47:04        13   0:00:00   0:00:00       0   AGENT  13:47:03   \n",
-       "43061  13:58:40         9  13:58:40  13:59:49      69    HANG   0:00:00   \n",
-       "43062  17:11:12        21   0:00:00   0:00:00       0    HANG   0:00:00   \n",
-       "43063  18:30:54        35   0:00:00   0:00:00       0    HANG   0:00:00   \n",
-       "43064  22:23:45        10   0:00:00   0:00:00       0    HANG   0:00:00   \n",
        "\n",
-       "       ser_exit  ser_time     server  \n",
-       "0       0:00:00         0  NO_SERVER  \n",
-       "1       7:30:09       352     ZOHARI  \n",
-       "2       7:49:16        55     GELBER  \n",
-       "3       8:09:25       158       ROTH  \n",
-       "4       8:28:01       181     SHARON  \n",
-       "...         ...       ...        ...  \n",
-       "43060  13:56:16       553   Z2ELINOR  \n",
-       "43061   0:00:00         0  NO_SERVER  \n",
-       "43062   0:00:00         0  NO_SERVER  \n",
-       "43063   0:00:00         0  NO_SERVER  \n",
-       "43064   0:00:00         0  NO_SERVER  \n",
+       "       ser_exit  ser_time    server  \n",
+       "1       7:30:09       352    ZOHARI  \n",
+       "2       7:49:16        55    GELBER  \n",
+       "3       8:09:25       158      ROTH  \n",
+       "4       8:28:01       181    SHARON  \n",
+       "5       8:38:47       293    SHARON  \n",
+       "...         ...       ...       ...  \n",
+       "43055  11:51:52       609    Z2ARIE  \n",
+       "43056  12:41:07       184    Z2ARIE  \n",
+       "43057  13:05:47       389    Z2ARIE  \n",
+       "43058  13:18:30        17    Z2ARIE  \n",
+       "43060  13:56:16       553  Z2ELINOR  \n",
        "\n",
-       "[43065 rows x 17 columns]"
+       "[33754 rows x 17 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(DATA, sep='\\t')\n",
+    "df = df[df['server'] != 'NO_SERVER']\n",
     "df"
    ]
   }
