Se eliminó los datos sin servicio y se quedaron con los que tuvieron el mismo tipo de servicio

--- a/Notebooks/limpieza_dataset.ipynb
+++ b/Notebooks/limpieza_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "0d162bdf",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "a99ddcbc",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "3b4a61ad",
    "metadata": {},
    "outputs": [
@@ -65,13 +65,89 @@
    "id": "ca136b73",
    "metadata": {},
    "source": [
-    "Como queremos simular una M/M/S necesitamos datos en donde el server no sea NO_SERVER por lo que eliminaremos las filas con server: NO_SERVER"
+    "Como queremos simular una M/M/S necesitamos datos en donde hubo un servicio, por lo que los apartados NO_SERVER no nos sirven"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "0c6535f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df['server'] != 'NO_SERVER']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2acd1eb",
+   "metadata": {},
+   "source": [
+    "También queremos los servicios donde el servicio fue el mismo, es decir queremos que vru+line sea el mismo para nuestros datos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0f8e5d56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "vru+line\n",
+       "AA0216      1556\n",
+       "AA0116      1514\n",
+       "AA0201      1414\n",
+       "AA0207      1404\n",
+       "AA0213      1371\n",
+       "AA0208      1369\n",
+       "AA0214      1364\n",
+       "AA0109      1351\n",
+       "AA0203      1345\n",
+       "AA0103      1338\n",
+       "AA0206      1336\n",
+       "AA0104      1332\n",
+       "AA0115      1329\n",
+       "AA0209      1326\n",
+       "AA0210      1319\n",
+       "AA0106      1303\n",
+       "AA0110      1301\n",
+       "AA0113      1298\n",
+       "AA0101      1290\n",
+       "AA0215      1252\n",
+       "AA0202      1246\n",
+       "AA0204      1228\n",
+       "AA0105      1226\n",
+       "AA0205      1161\n",
+       "AA0102       842\n",
+       "AA0111       327\n",
+       "AA0107       319\n",
+       "AA0108       293\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['vru+line']].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "236c59c7",
+   "metadata": {},
+   "source": [
+    "Agarraremos el servicio AA0216 porque es donde más datos hay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "5b7d4aa3",
    "metadata": {},
    "outputs": [
     {
@@ -116,104 +192,104 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AA0101</td>\n",
-       "      <td>49297</td>\n",
-       "      <td>67472894.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>PS</td>\n",
-       "      <td>991201</td>\n",
-       "      <td>7:22:53</td>\n",
-       "      <td>7:22:58</td>\n",
-       "      <td>5</td>\n",
-       "      <td>7:22:58</td>\n",
-       "      <td>7:24:18</td>\n",
-       "      <td>80</td>\n",
-       "      <td>AGENT</td>\n",
-       "      <td>7:24:17</td>\n",
-       "      <td>7:30:09</td>\n",
-       "      <td>352</td>\n",
-       "      <td>ZOHARI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AA0101</td>\n",
-       "      <td>49298</td>\n",
-       "      <td>56165871.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>PS</td>\n",
-       "      <td>991201</td>\n",
-       "      <td>7:44:58</td>\n",
-       "      <td>7:45:04</td>\n",
-       "      <td>6</td>\n",
-       "      <td>7:45:04</td>\n",
-       "      <td>7:48:22</td>\n",
-       "      <td>198</td>\n",
-       "      <td>AGENT</td>\n",
-       "      <td>7:48:21</td>\n",
-       "      <td>7:49:16</td>\n",
-       "      <td>55</td>\n",
-       "      <td>GELBER</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AA0101</td>\n",
-       "      <td>49299</td>\n",
+       "      <th>40996</th>\n",
+       "      <td>AA0216</td>\n",
+       "      <td>15147</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>PS</td>\n",
+       "      <td>IN</td>\n",
        "      <td>991201</td>\n",
-       "      <td>8:06:40</td>\n",
-       "      <td>8:06:48</td>\n",
-       "      <td>8</td>\n",
+       "      <td>7:01:36</td>\n",
+       "      <td>7:01:49</td>\n",
+       "      <td>13</td>\n",
        "      <td>0:00:00</td>\n",
        "      <td>0:00:00</td>\n",
        "      <td>0</td>\n",
        "      <td>AGENT</td>\n",
-       "      <td>8:06:47</td>\n",
-       "      <td>8:09:25</td>\n",
-       "      <td>158</td>\n",
-       "      <td>ROTH</td>\n",
+       "      <td>7:01:48</td>\n",
+       "      <td>7:08:31</td>\n",
+       "      <td>403</td>\n",
+       "      <td>Z2ARIE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>AA0101</td>\n",
-       "      <td>49300</td>\n",
-       "      <td>42791442.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>PS</td>\n",
+       "      <th>40997</th>\n",
+       "      <td>AA0216</td>\n",
+       "      <td>15148</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>IN</td>\n",
        "      <td>991201</td>\n",
-       "      <td>8:24:13</td>\n",
-       "      <td>8:24:19</td>\n",
-       "      <td>6</td>\n",
-       "      <td>8:24:19</td>\n",
-       "      <td>8:25:00</td>\n",
-       "      <td>41</td>\n",
+       "      <td>7:53:58</td>\n",
+       "      <td>7:54:10</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0:00:00</td>\n",
+       "      <td>0:00:00</td>\n",
+       "      <td>0</td>\n",
        "      <td>AGENT</td>\n",
-       "      <td>8:25:00</td>\n",
-       "      <td>8:28:01</td>\n",
-       "      <td>181</td>\n",
-       "      <td>SHARON</td>\n",
+       "      <td>7:54:09</td>\n",
+       "      <td>7:56:44</td>\n",
+       "      <td>155</td>\n",
+       "      <td>Z2ARIE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>AA0101</td>\n",
-       "      <td>49301</td>\n",
-       "      <td>7750219.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>PS</td>\n",
+       "      <th>40998</th>\n",
+       "      <td>AA0216</td>\n",
+       "      <td>15149</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>IN</td>\n",
        "      <td>991201</td>\n",
-       "      <td>8:33:24</td>\n",
-       "      <td>8:33:30</td>\n",
-       "      <td>6</td>\n",
-       "      <td>8:33:30</td>\n",
-       "      <td>8:33:55</td>\n",
+       "      <td>8:37:42</td>\n",
+       "      <td>8:37:57</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0:00:00</td>\n",
+       "      <td>0:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AGENT</td>\n",
+       "      <td>8:37:56</td>\n",
+       "      <td>8:39:01</td>\n",
+       "      <td>65</td>\n",
+       "      <td>Z2ARIE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40999</th>\n",
+       "      <td>AA0216</td>\n",
+       "      <td>15150</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>991201</td>\n",
+       "      <td>9:14:04</td>\n",
+       "      <td>9:14:13</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9:14:13</td>\n",
+       "      <td>9:14:38</td>\n",
        "      <td>25</td>\n",
        "      <td>AGENT</td>\n",
-       "      <td>8:33:54</td>\n",
-       "      <td>8:38:47</td>\n",
-       "      <td>293</td>\n",
-       "      <td>SHARON</td>\n",
+       "      <td>9:14:37</td>\n",
+       "      <td>9:21:18</td>\n",
+       "      <td>401</td>\n",
+       "      <td>Z2ARIE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41002</th>\n",
+       "      <td>AA0216</td>\n",
+       "      <td>15153</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>991201</td>\n",
+       "      <td>9:23:24</td>\n",
+       "      <td>9:23:36</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0:00:00</td>\n",
+       "      <td>0:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AGENT</td>\n",
+       "      <td>9:23:35</td>\n",
+       "      <td>9:26:15</td>\n",
+       "      <td>160</td>\n",
+       "      <td>Z2ARIE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -337,16 +413,16 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>33754 rows × 17 columns</p>\n",
+       "<p>1556 rows × 17 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "      vru+line  call_id  customer_id  priority type    date vru_entry  \\\n",
-       "1       AA0101    49297   67472894.0         2   PS  991201   7:22:53   \n",
-       "2       AA0101    49298   56165871.0         2   PS  991201   7:44:58   \n",
-       "3       AA0101    49299          0.0         0   PS  991201   8:06:40   \n",
-       "4       AA0101    49300   42791442.0         2   PS  991201   8:24:13   \n",
-       "5       AA0101    49301    7750219.0         2   PS  991201   8:33:24   \n",
+       "40996   AA0216    15147          0.0         0   IN  991201   7:01:36   \n",
+       "40997   AA0216    15148          0.0         0   IN  991201   7:53:58   \n",
+       "40998   AA0216    15149          0.0         0   IN  991201   8:37:42   \n",
+       "40999   AA0216    15150          0.0         0   IN  991201   9:14:04   \n",
+       "41002   AA0216    15153          0.0         0   IN  991201   9:23:24   \n",
        "...        ...      ...          ...       ...  ...     ...       ...   \n",
        "43055   AA0216    17206          0.0         0   IN  991231  11:40:37   \n",
        "43056   AA0216    17207          0.0         0   IN  991231  12:37:47   \n",
@@ -355,11 +431,11 @@
        "43060   AA0216    17211          0.0         0   IN  991231  13:46:51   \n",
        "\n",
        "       vru_exit  vru_time   q_start    q_exit  q_time outcome ser_start  \\\n",
-       "1       7:22:58         5   7:22:58   7:24:18      80   AGENT   7:24:17   \n",
-       "2       7:45:04         6   7:45:04   7:48:22     198   AGENT   7:48:21   \n",
-       "3       8:06:48         8   0:00:00   0:00:00       0   AGENT   8:06:47   \n",
-       "4       8:24:19         6   8:24:19   8:25:00      41   AGENT   8:25:00   \n",
-       "5       8:33:30         6   8:33:30   8:33:55      25   AGENT   8:33:54   \n",
+       "40996   7:01:49        13   0:00:00   0:00:00       0   AGENT   7:01:48   \n",
+       "40997   7:54:10        12   0:00:00   0:00:00       0   AGENT   7:54:09   \n",
+       "40998   8:37:57        15   0:00:00   0:00:00       0   AGENT   8:37:56   \n",
+       "40999   9:14:13         9   9:14:13   9:14:38      25   AGENT   9:14:37   \n",
+       "41002   9:23:36        12   0:00:00   0:00:00       0   AGENT   9:23:35   \n",
        "...         ...       ...       ...       ...     ...     ...       ...   \n",
        "43055  11:40:46         9  11:40:46  11:41:44      58   AGENT  11:41:43   \n",
        "43056  12:38:04        17   0:00:00   0:00:00       0   AGENT  12:38:03   \n",
@@ -368,11 +444,11 @@
        "43060  13:47:04        13   0:00:00   0:00:00       0   AGENT  13:47:03   \n",
        "\n",
        "       ser_exit  ser_time    server  \n",
-       "1       7:30:09       352    ZOHARI  \n",
-       "2       7:49:16        55    GELBER  \n",
-       "3       8:09:25       158      ROTH  \n",
-       "4       8:28:01       181    SHARON  \n",
-       "5       8:38:47       293    SHARON  \n",
+       "40996   7:08:31       403    Z2ARIE  \n",
+       "40997   7:56:44       155    Z2ARIE  \n",
+       "40998   8:39:01        65    Z2ARIE  \n",
+       "40999   9:21:18       401    Z2ARIE  \n",
+       "41002   9:26:15       160    Z2ARIE  \n",
        "...         ...       ...       ...  \n",
        "43055  11:51:52       609    Z2ARIE  \n",
        "43056  12:41:07       184    Z2ARIE  \n",
@@ -380,18 +456,69 @@
        "43058  13:18:30        17    Z2ARIE  \n",
        "43060  13:56:16       553  Z2ELINOR  \n",
        "\n",
-       "[33754 rows x 17 columns]"
+       "[1556 rows x 17 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = df[df['server'] != 'NO_SERVER']\n",
+    "df = df[ df['vru+line'] == 'AA0216']\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "e9092c35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "server\n",
+       "Z2EYAL       299\n",
+       "Z2NIRIT      292\n",
+       "Z2ARIE       260\n",
+       "Z2OFERZ      179\n",
+       "Z2ELINOR     169\n",
+       "Z2SPIEGEL    154\n",
+       "Z2ASSAF       84\n",
+       "Z2LIOR        57\n",
+       "GELBER        26\n",
+       "KAZAV         21\n",
+       "DORIT         11\n",
+       "ROTH           1\n",
+       "SHARON         1\n",
+       "ZIPI           1\n",
+       "AVI            1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['server'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23670613",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29e2ff3d",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
