--- a/Notebooks/limpieza_dataset.ipynb
+++ b/Notebooks/limpieza_dataset.ipynb
@@ -69,7 +69,7 @@
    "id": "ca136b73",
    "metadata": {},
    "source": [
-    "Como queremos simular una M/M/S necesitamos datos en donde hubo un servicio, por lo que los apartados NO_SERVER o ser_time = 0, no son customers"
+    "Como queremos simular una M/M/S necesitamos datos en donde hubo un servicio, por lo que los apartados NO_SERVER o ser_time = 0, no nos sirven"
    ]
   },
   {
@@ -474,6 +474,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "64762816",
+   "metadata": {},
+   "source": [
+    "Ahora eliminaremos las columnas que no sean de relevancia para la simulación"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 156,
    "id": "e9765520",
@@ -574,6 +582,14 @@
    "source": [
     "cols = ['customer_id', 'type','priority','outcome','call_id','vru_entry','vru_exit','vru_time']\n",
     "df.drop(columns=cols, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1df5cb67",
+   "metadata": {},
+   "source": [
+    "Veamos cuantos servidores hay"
    ]
   },
   {
@@ -1372,29 +1388,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 163,
-   "id": "5b6850e1",
+   "cell_type": "markdown",
+   "id": "cd548400",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index([40996, 40997, 40998, 40999, 41002, 41004, 41005, 41006, 41007, 41008,\n",
-       "       41010, 41011, 41012, 41013, 41014, 41016, 41017, 41018, 41019, 41020,\n",
-       "       41021, 41022, 41023, 41024, 41025, 41026, 41027, 41028, 41030, 41031,\n",
-       "       41032, 41033, 41035, 41037, 41038, 41040, 41041, 41046, 41050, 41051,\n",
-       "       41053, 41054, 41055, 41056, 41058, 41059, 41060, 41062, 41063, 41064],\n",
-       "      dtype='int64')"
-      ]
-     },
-     "execution_count": 163,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df[df['date']==991201].index"
+    "Podemos notar que aunque sea diferentes servidores no todos estan ocupados al mismo tiempo"
    ]
   },
   {
@@ -1461,6 +1459,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6b0f9d3f",
+   "metadata": {},
+   "source": [
+    "La distribucion de servidores por dia es distinta"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 166,
    "id": "e4d15923",
@@ -1504,27 +1510,6 @@
    "metadata": {},
    "source": [
     "Pero los servidores son las personas que atienden, no las 'cajas', veamos si podemos decir que tenemos una o dos cajas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
-   "id": "55884046",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'7:54:09'"
-      ]
-     },
-     "execution_count": 168,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[df['date']==991201].iloc[1]['ser_start']"
    ]
   },
   {
@@ -1862,6 +1847,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8ffd6d7f",
+   "metadata": {},
+   "source": [
+    "Veamos la distribución de las cajas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 182,
    "id": "8791b402",
@@ -1880,6 +1873,14 @@
    ],
    "source": [
     "sns.histplot(df['caja']);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf8631d7",
+   "metadata": {},
+   "source": [
+    "Guardamos el dataset listo para usarse en simulación"
    ]
   },
   {
