--- a/Notebooks/limpieza_dataset.ipynb
+++ b/Notebooks/limpieza_dataset.ipynb
@@ -1392,7 +1392,7 @@
    "id": "cd548400",
    "metadata": {},
    "source": [
-    "Podemos notar que aunque sea diferentes servidores no todos estan ocupados al mismo tiempo"
+    "Podemos notar que aunque sean diferentes servidores no todos estan ocupados al mismo tiempo"
    ]
   },
   {
